search route added, pagination added for top researchers and top papers endpoint
